Use openjfx dependencies from maven central
* Can use the release flag of maven-compiler-plugin again
* Make the openjfx dependencies as provided, so that they
  don't end up in pmd-bin-*.zip